style.css
/* ... */
.fancyrow2 {
	height: 18px !important;
	background-color: #F0A62F;
	background-position: top;
	background-repeat: repeat-x;
	border-bottom: 1px solid #fff;
	color: #fff;
}
li {
	padding: 0;
	margin: 0;
	list-style: disc outside url(images/misc/li.gif);
	list-style: none;
}
ul {
	margin: 0px 5px 10px;
}
	.rtl ul {
		margin: 0 10px 0 20px;
	}
.screen {
	border: 1px solid #ddd;
	text-align: center;
}
a img {
	border: 0;
}
.even {
	background: #D9E7C2;
}
.odd {
	background: #fff;
}


/* -------------------------[ end sortable table ]--- */
.disabledImage {
	width:20px;
	opacity:.3;
	filter:alpha(opacity=30);
}

.disabledImage img {
	border:0;
}

.editorCell {
	border-top:1px solid gray;
	text-align:left;
	vertical-align:baseline;
}

.rtl .editorCell {
	text-align:right;
}

.row1,.row2,.row3 {
	background-color:#fff;
	color:#333;
}

.row2 {
	background-color:#C8DAA2;
}

.row3 {
	background-color:#f7f7f7;
}

.treeframebody {
	background: #f8f8f8;
	box-shadow: -2px 2px 6px rgba(0, 0, 0, 0.1) inset;
	border-right: 1px solid #ccc;
}

#treeMenu * {
	vertical-align:middle;
}

#treeHolder {
	cursor:default;
	height:100%;
	padding:5px 0 0;
/* 	background: #f7f7f7; */
	width: 299px !important;
	line-height:1.3em;
}

#treeHolder div {
}

#treeRoot div img {
	margin:0 0 0 -6px;
}

.rtl #treeRoot div img {
	margin:0 -6px 0 0;
}

#floater {
	display:none;
	position:absolute;
	width:200px;
	height:50px;
	top:25px;
	left:4px;
	background:#fff;
	border-bottom:1px solid #666;
	z-index:500;
}

.rtl #floater {
	right:4px;
}

.rootNode,.treeNode,.treeNodeHover,.treeNodeSelected,.emptyNode {
	color:#000;
	cursor:pointer;
	margin:0 3px;
	width:auto;
}

.treeNodeSelected,.treeNodeHover {
	background-color:#FFF;
	border:1px solid #CCC;
	color:#000;
	padding:2px 4px;
	font-weight:700;
	-moz-border-radius:9px;
	-webkit-border-radius:9px;
	border-radius:9px;
	margin-left:-3px;
}

.unpublished a,.unpublishedNode {
	color:#B68282;
}

.deletedNode {
	color:#A52A2A;
	text-decoration:line-through;
}

.publishedNode {
	color:#222;
}

.emptyNode {
	color:#aaa;
	cursor:default;
}

.notInMenuNode {
	color:#777;
	text-decoration:none;
}

.protectedNode {
	color:#aaa;
}

#treeSplitter {
	width:10px;
	height:100%;
	position:absolute;
	right:-10px;
}

.rtl #treeSplitter {
	left:-10px;
}

.disabledPlugin a {
	color:#aaa;
	text-decoration:line-through;
}

/* -------------------------[ grid style ]--- */
.grid {
	width:100%;
	background-color:#fff;
	border:1px solid #ddd;
	border-collapse:collapse;
	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.07);
}

.grid td, .grid th, .sectionBody td, .sectionBody th, .tab-page td, .tab-page th {
	padding:3px 6px;
}

.gridHeader,.grid th {
	padding: 5px 9px 5px 15px;
	background: #505050;
	background: -moz-linear-gradient(top,  #505050 0%, #191919 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#505050), color-stop(100%,#191919));
	background: -webkit-linear-gradient(top,  #505050 0%,#191919 100%);
	background: -o-linear-gradient(top,  #505050 0%,#191919 100%);
	background: -ms-linear-gradient(top,  #505050 0%,#191919 100%);
	background: linear-gradient(to bottom,  #505050 0%,#191919 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#505050', endColorstr='#191919',GradientType=0 );
	box-shadow: 0 1px 0 rgba(255,255,255,0.1) inset, 0 1px 1px rgba(255,255,255,0.1) inset;
	border:1px solid #111;
	font-size:10pt;
	font-weight:bold;
	color: #fff;
	padding:7px 10px;
	text-shadow:0 1px 1px rgba(255,255,255,0.2), 0 -1px 1px #000;

	white-space:nowrap;
	text-align:left;
	padding-top:5px;
	padding-bottom: 5px;
}


		
.gridItem {
	background-color:#fff;
}

.gridAltItem {
	background-color:#f7f7f7;
}
	

.gridRowIcon:hover {
	background-color:#f5f5dc;
}

.grid a {
	text-decoration:none;
}

.grid img {
	vertical-align:middle;
	padding-right:4px;
}


/* -------------------------[ search bar ]--- */
.searchbar {
	width:100%;
	border:1px solid silver;
	background-color:#DBDBDB;
}

.searchtext {
	height:18px;
	padding:2px;
}

/* -------------------------[ home page main links ]--- */
a.hometblink,a.hometblink:active,a.hometblink:visited,a.hometblink:link,.hometblink {
	text-decoration:underline;
	color:#333;
	font-weight:700;
}

a.hometblink:hover {
	text-decoration:underline;
	color:Gray;
}

.notice {
	width:100%;
	padding:5px;
	border:1px solid #eee;
	background-color:#f7f7f7;
	color:#707070;
}

#preLoader {
	display: none;
	position:absolute;
	z-index:50000;
	width:100%;
	height:100%;
	text-align:center;
	vertical-align:middle;
}

.preLoaderText {
	background-color:#fff;
	width:300px;
	height:150px;
	padding:50px;
	border:1px solid #039;
}

/* -------------------------[ contextmenu in editing modules ]--- */
.contextMenu {
	background:#fff;
	margin:0;
	padding:0;
	border:1px solid #039;
	border-color:#eaeaea #909090 #707070 #eaeaea;
	position:absolute;
	z-index:10000;
}

.cntxMnuItem {
	background-image:url(images/misc/_tx_.gif);
	cursor:pointer;
	color:#333;
	padding:3px 16px 3px 2px;
}

.rtl .cntxMnuItem,.rtl .cntxMnuItemDisabled {
	padding:3px 2px 3px 16px;
}

.cntxMnuItemDisabled {
	cursor:default;
	padding:3px 16px 3px 2px;
	color:#111;
}

.cntxMnuItemOver {
	cursor:pointer;
	color:#333;
	background:#e3e3e3;
	padding:2px 15px 2px 1px;
	border:1px solid silver;
}

.rtl .cntxMnuItemOver {
	padding:2px 1px 2px 15px;
}

.cntxMnuItem img,.cntxMnuItemOver img,.cntxMnuItemDisabled img {
	margin:0 8px 0 0;
}

.rtl .cntxMnuItem img,.rtl .cntxMnuItemOver img,.rtl .cntxMnuItemDisabled img {
	margin:0 0 0 8px;
}

.cntxMnuItem img,.cntxMnuItemDisabled img {
	opacity:.3;
	filter:alpha(opacity=30);
}

.cntxMnuSeparator {
	font-size:0;
	height:1px;
	background-color:silver;
	overflow:hidden;
	margin:3px 1px 3px 28px;
}

.rtl .cntxMnuSeparator {
	margin:3px 28px 3px 1px;
}

/* -------------------------[ Top Navbar of snap in top menu bar layout ]--- */
#topMenu {
	background:url(images/misc/headers.jpg) repeat scroll 0 0 #23393C;
}
/* ... */

